# resolve

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NEWS.md  README.md  REFACTOR.md  RELEASE_PLAN.md  ROADMAP.md  SECURITY.md  build_docs.py  codecov.yml  extension-plan.md  extension.md  features.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml  r-cmd-check.yml  release-pypi.yml  tests.yml
docs/: boost.md  changelog.md  index.md
docs/api/: dataset.md  model.md  predictor.md  trainer.md
docs/stylesheets/: extra.css
docs/tutorials/: data-preparation.md  embeddings.md  installation.md  prediction.md  quickstart.md  training.md
examples/: README.md  getting_started.ipynb  minimal_example.py  test_asaas.py  train_asaas.py  train_asaas_area.py
paper/: outline.md
prototype/: ENCODER_GENERALIZATION.md  README.md
prototype/bindings/python/: CMakeLists.txt  pyproject.toml
prototype/bindings/python/resolve/: __init__.py
prototype/bindings/python/src/: bindings.cpp
prototype/bindings/python/tests/: conftest.py  test_equivalence.py  test_model.py
prototype/bindings/r/: DESCRIPTION
prototype/bindings/r/R/: metrics.R  model.R  predictor.R  resolve.R
prototype/bindings/r/src/: bindings.cpp
prototype/bindings/r/tests/: testthat.R
prototype/bindings/r/tests/testthat/: test-metrics.R
prototype/core/: CMakeLists.txt
prototype/core/include/resolve/: dataset.hpp  encoder.hpp  loss.hpp  model.hpp  plot_encoder.hpp  predictor.hpp  trainer.hpp  types.hpp  vocab.hpp
prototype/core/src/: encoder.cpp  plot_encoder.cpp  trainer.cpp
prototype/core/tests/: CMakeLists.txt  test_loss.cpp  test_model.cpp  test_plot_encoder.cpp
prototype/examples/: inference_example.py  python_example.py  r_example.R  r_simple_example.R
r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  _pkgdown.yml
r/R/: RcppExports.R  resolve.R  zzz.R
r/pkgdown/: mathjax-config.html
r/src/: Makevars  Makevars.win  RcppExports.cpp  resolve_rcpp.cpp
r/tests/: testthat.R
r/tests/testthat/: test-encoder.R  test-metrics.R  test-trainer.R
r/vignettes/: .gitignore  getting-started.Rmd
scripts/: create_test_subset.py
src/core/: CMakeLists.txt  cuda_toolchain.cmake  run_tests.py
src/core/build_cuda/: do_build.bat  launch_build.ps1
src/core/cli/: CMakeLists.txt  info_cmd.cpp  main.cpp  predict_cmd.cpp  train_cmd.cpp
src/core/cpp_src/: dataset.cpp  encoder.cpp  loss.cpp  model.cpp  predictor.cpp  trainer.cpp
src/core/cuda/: feature_hash.cpp  kernels.cu  kernels.cuh
src/core/include/resolve/: csv_reader.hpp  cuda_compat.h  dataset.hpp  encoder.hpp  loss.hpp  model.hpp  predictor.hpp  resolve.hpp  role_mapping.hpp  trainer.hpp  types.hpp  utils.hpp
src/core/include/resolve/cuda/: feature_hash.hpp
src/core/python/: CMakeLists.txt  pyproject.toml
src/core/python/src/: bindings.cpp
src/core/python/src/resolve_core/: __init__.py
src/core/r/: CMakeLists.txt  DESCRIPTION  NAMESPACE
src/core/r/R/: RcppExports.R  resolve.R  spacc.R
src/core/r/src/: Makevars  Makevars.win  RcppExports.cpp  bindings.cpp
src/core/tests/: CMakeLists.txt  benchmark_cuda.cpp  test_dataset.cpp  test_loss.cpp  test_model.cpp
src/resolve/: __init__.py  _types.pyi  config.py  dataset.py  pyproject.toml  trainer.py
src/resolve/backend/: __init__.py
src/resolve/data/: __init__.py  dataset.py  roles.py
src/resolve/encode/: __init__.py  embedding.py  species.py  species_fast.py  vocab.py
src/resolve/inference/: __init__.py  predictor.py
src/resolve/model/: __init__.py  encoder.py  resolve.py
src/resolve/tests/: __init__.py  conftest.py  test_dataset.py  test_metrics.py  test_model.py  test_trainer.py
src/resolve/train/: __init__.py  loss.py  metrics.py  trainer.py
src/spacc/: __init__.py
src/spacc/data/: __init__.py  dataset.py  roles.py
src/spacc/encode/: __init__.py  species.py
src/spacc/inference/: __init__.py  predictor.py
src/spacc/model/: __init__.py  encoder.py  head.py  spacc.py
src/spacc/train/: __init__.py  loss.py  trainer.py
tests/: conftest.py  test_resolve.py  test_spacc.py
