[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resolve"
version = "0.1.0"
description = "Representation Encoding of Species Outcomes via Linear Vector Embeddings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gilles Colling" }
]
keywords = ["ecology", "species", "machine-learning", "torch", "composition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]

[tool.hatch.build.targets.wheel]
packages = ["src/resolve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
