[build-system]
requires = ["setuptools>=64", "wheel", "cmake>=3.18", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "spacc-core"
version = "0.1.0"
description = "C++ core library for Spacc - Species composition based prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gilles Colling"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/gcol33/spacc-core"
Repository = "https://github.com/gcol33/spacc-core"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spacc_core = ["*.so", "*.pyd", "*.dll"]
