[build-system]
requires = ["scikit-build-core>=0.4.3", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "resolve"
version = "0.1.0"
description = "RESOLVE: Species-composition based ecosystem prediction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Gilles Colling"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gcol33/resolve"
Repository = "https://github.com/gcol33/resolve"

[tool.scikit-build]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
wheel.packages = ["src/resolve_core"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON = "ON"
BUILD_TESTS = "OFF"
